<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parentLayout"
    android:background="@color/lightPink"
    android:padding="20dp"
    tools:context=".ui.Login">

    <TextView
        android:id="@+id/login_message_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/Login_to_your_accnt"
        android:textSize="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chatid_et"
        android:hint="@string/chatid"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/channel_et"
        android:hint="@string/channel"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_et"
        android:inputType="textPassword"
        android:textCursorDrawable="@color/darkYellow"
        android:hint="@string/password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:textCursorDrawable="@color/darkYellow"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/login_btn"/>


    <TextView
        android:layout_width="match_parent"
        android:paddingTop="10sp"
        android:layout_height="wrap_content"
        android:text="@string/warning_message"/>





</LinearLayout>